[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/OpenSans/OpenSans-VariableFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Card Selection.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 1 )

[node name="Card Selection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Text Label" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -222.5
margin_right = 222.5
margin_bottom = 104.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] 
Choose one bonus! [/center]"
text = " 
Choose one bonus! "

[node name="Card Place" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.0
margin_top = -169.0
margin_right = -336.0
margin_bottom = -129.0

[node name="Card Place2" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -169.0
margin_right = -70.0
margin_bottom = -129.0

[node name="Card Place3" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 154.0
margin_top = -169.0
margin_right = 194.0
margin_bottom = -129.0

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -189.0

[node name="Player Properties Label" type="RichTextLabel" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -156.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="Decline Button" type="Button" parent="."]
modulate = Color( 1, 1, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -293.0
margin_top = -73.0
margin_right = -13.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 2 )
text = "Decline"

[connection signal="pressed" from="Decline Button" to="." method="_on_Decline_Button_pressed"]
